<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/close_fragment_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        app:tint="@color/black"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/ic_close_desc"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_fragment_button"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="10dp"
        android:padding="10dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/recent_week_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_week_filter_text"
            app:chipCornerRadius="10dp"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:chipStrokeColor="#00FF0004"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/anger_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anger_text"
            android:textColor="@color/anger"
            app:chipBackgroundColor="#4DFF0004"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00FF0004"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/disgust_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disgust_text"
            android:textColor="@color/disgust"
            app:chipBackgroundColor="#4D09851D"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#0009851D"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/fear_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fear_text"
            android:textColor="@color/fear"
            app:chipBackgroundColor="#4D673AB7"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00673AB7"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sad_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sad_text"
            android:textColor="@color/sad"
            app:chipBackgroundColor="#4D3F51B5"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#003F51B5"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/confuse_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confuse_text"
            android:textColor="@color/confuse"
            android:textStyle="bold"
            app:chipBackgroundColor="#4DFFEB3B"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00FFEB3B"
            tools:fontFamily="sans-serif-condensed"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/shame_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shame_text"
            android:textColor="@color/shame"
            app:chipBackgroundColor="#4D964B00"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00964B00"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/happy_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_text"
            android:textColor="@color/happy"
            app:chipBackgroundColor="#33FF1D89"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00FF1D89"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/surprise_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surprise_text"
            android:textColor="@color/surprise"
            app:chipBackgroundColor="#4DFFA500"
            app:chipCornerRadius="10dp"
            app:chipStrokeColor="#00FF1D89"
            tools:fontFamily="sans-serif-medium"
            app:chipMinHeight="24dp"
            app:ensureMinTouchTargetSize="false"
            android:checkable="true"
            app:checkedIcon="@drawable/ic_check"
            app:checkedIconEnabled="true"/>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/sad"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_chips"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_reason_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_reason_why_text"
            android:inputType="text"
            android:maxLength="20"
            android:textColorHint="#FFFFFF"
            android:background="#0F333333"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>