...
        app:srcCompat="@drawable/oval" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/signup_edit_username"
        android:layout_marginTop="-170dp"
        android:layout_below="@id/imageView"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:layout_marginBottom="20dp"
        android:text="@string/create_account"
...
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/username_cap"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/signup_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_username"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_edittext"
        android:paddingHorizontal="20dp"
...
        android:autofillHints="emailAddress"
        android:hint="@string/email_cap"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/signup_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_edit_email"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/ic_edittext"
...
        android:layout_alignStart="@id/signup_edit_username"
        android:text="@string/register_login"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_nav_bar"
        android:fontFamily="@font/roboto_medium"
        android:layout_below="@id/signup_login"
        android:text="@string/signup"
...
