...
            android:layout_alignParentTop="true"
            android:layout_marginTop="580dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/lightbtn" />

        <Button
            android:id="@+id/welcome_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="25sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="635dp"
...
